@@ -2,7 +2,6 @@ package org.openmetadata.service.migration.context;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
@@ -15,14 +14,13 @@ public class MigrationContext {
   @Getter private final List<MigrationOps> migrationOps;
   private final Handle handle;
   // Key is the Ops name and value the computed result
-  @Getter private HashMap<String, Long> results;
+  @Getter private final HashMap<String, Long> results = new HashMap<>();
 
   public MigrationContext(String version, List<MigrationOps> migrationOps, Handle handle) {
     this.version = version;
     this.migrationOps =
-        Stream.concat(migrationOps.stream(), CommonMigrationOps.getCommonOps().stream()).collect(Collectors.toList());
+        Stream.concat(migrationOps.stream(), CommonMigrationOps.getCommonOps().stream()).toList();
     this.handle = handle;
-    this.results = new HashMap<>();
   }
 
   public void compute() {
@@ -34,6 +32,6 @@ public class MigrationContext {
   }
 
   public void show() {
-    LOG.info(String.format("Version [%s] context is [%s]", version, results.toString()));
+    LOG.info(String.format("Version [%s] context is [%s]", version, results));
   }
 }
