@@ -15,15 +15,18 @@ package org.openmetadata.service.resources.searchindex;
 
 import static java.util.Collections.singletonList;
 import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
+import static javax.ws.rs.core.Response.Status.NOT_FOUND;
 import static javax.ws.rs.core.Response.Status.OK;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.openmetadata.common.utils.CommonUtil.listOf;
 import static org.openmetadata.service.Entity.FIELD_OWNER;
+import static org.openmetadata.service.Entity.TAG;
 import static org.openmetadata.service.util.EntityUtil.fieldAdded;
 import static org.openmetadata.service.util.EntityUtil.fieldUpdated;
 import static org.openmetadata.service.util.TestUtils.ADMIN_AUTH_HEADERS;
+import static org.openmetadata.service.util.TestUtils.UpdateType.MINOR_UPDATE;
 import static org.openmetadata.service.util.TestUtils.assertListNotNull;
 import static org.openmetadata.service.util.TestUtils.assertListNull;
 import static org.openmetadata.service.util.TestUtils.assertResponse;
@@ -59,7 +62,6 @@ import org.openmetadata.service.resources.services.SearchServiceResourceTest;
 import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.util.ResultList;
 import org.openmetadata.service.util.TestUtils;
-import org.openmetadata.service.util.TestUtils.UpdateType;
 
 @Slf4j
 public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, CreateSearchIndex> {
@@ -97,14 +99,16 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
   @Test
   void post_searchIndexWithDifferentService_200_ok(TestInfo test) throws IOException {
     String[] differentServices = {
-      ELASTICSEARCH_SEARCH_SERVICE_REFERENCE.getName(), OPENSEARCH_SEARCH_SERVICE_REFERENCE.getName()
+      ELASTICSEARCH_SEARCH_SERVICE_REFERENCE.getName(),
+      OPENSEARCH_SEARCH_SERVICE_REFERENCE.getName()
     };
 
     // Create searchIndex for each service and test APIs
     for (String service : differentServices) {
       createAndCheckEntity(createRequest(test).withService(service), ADMIN_AUTH_HEADERS);
 
-      // List searchIndexes by filtering on service name and ensure right searchIndexes in the response
+      // List searchIndexes by filtering on service name and ensure right searchIndexes in the
+      // response
       Map<String, String> queryParams = new HashMap<>();
       queryParams.put("service", service);
 
@@ -121,34 +125,41 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
         new ArrayList<>(
             Arrays.asList(
                 new SearchIndexField().withName("name").withDataType(SearchIndexDataType.TEXT),
-                new SearchIndexField().withName("displayName").withDataType(SearchIndexDataType.KEYWORD)));
+                new SearchIndexField()
+                    .withName("displayName")
+                    .withDataType(SearchIndexDataType.KEYWORD)));
     List<SearchIndexField> searchIndexFields =
-        Arrays.asList(
+        List.of(
             new SearchIndexField()
                 .withName("tableSearchIndex")
                 .withDataType(SearchIndexDataType.NESTED)
                 .withChildren(fields));
-    CreateSearchIndex createSearchIndex = createRequest(test).withOwner(USER1_REF).withFields(searchIndexFields);
+    CreateSearchIndex createSearchIndex =
+        createRequest(test).withOwner(USER1_REF).withFields(searchIndexFields);
 
     SearchIndex searchIndex = createEntity(createSearchIndex, ADMIN_AUTH_HEADERS);
-    ChangeDescription change = getChangeDescription(searchIndex.getVersion());
+    ChangeDescription change = getChangeDescription(searchIndex, MINOR_UPDATE);
 
     // Patch and update the searchIndex
-    fields.add(new SearchIndexField().withName("updatedBy").withDataType(SearchIndexDataType.KEYWORD));
+    fields.add(
+        new SearchIndexField().withName("updatedBy").withDataType(SearchIndexDataType.KEYWORD));
     List<SearchIndexField> updatedSearchIndexFields =
         List.of(
             new SearchIndexField()
                 .withName("tableSearchIndex")
                 .withChildren(fields)
                 .withDataType(SearchIndexDataType.NESTED));
-    createSearchIndex.withOwner(TEAM11_REF).withDescription("searchIndex").withFields(updatedSearchIndexFields);
+    createSearchIndex
+        .withOwner(TEAM11_REF)
+        .withDescription("searchIndex")
+        .withFields(updatedSearchIndexFields);
     SearchIndexField addedField = fields.get(2);
     addedField.setFullyQualifiedName(
         searchIndex.getFields().get(0).getFullyQualifiedName() + "." + addedField.getName());
     fieldUpdated(change, FIELD_OWNER, USER1_REF, TEAM11_REF);
     fieldUpdated(change, "description", "", "searchIndex");
     fieldAdded(change, "fields.tableSearchIndex", JsonUtils.pojoToJson(List.of(addedField)));
-    updateAndCheckEntity(createSearchIndex, Status.OK, ADMIN_AUTH_HEADERS, UpdateType.MINOR_UPDATE, change);
+    updateAndCheckEntity(createSearchIndex, Status.OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
   @Test
@@ -164,7 +175,8 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
             getField("post_code", SearchIndexDataType.TEXT, null),
             getField("county", SearchIndexDataType.TEXT, PERSONAL_DATA_TAG_LABEL));
 
-    CreateSearchIndex createSearchIndex = createRequest(test).withOwner(USER1_REF).withFields(fields);
+    CreateSearchIndex createSearchIndex =
+        createRequest(test).withOwner(USER1_REF).withFields(fields);
 
     //  update the searchIndex
     SearchIndex searchIndex = createEntity(createSearchIndex, ADMIN_AUTH_HEADERS);
@@ -184,7 +196,8 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
             getField("address_line_2", SearchIndexDataType.TEXT, null),
             getField("post_code", SearchIndexDataType.TEXT, null),
             getField("county", SearchIndexDataType.TEXT, PERSONAL_DATA_TAG_LABEL));
-    CreateSearchIndex createSearchIndex = createRequest(test).withOwner(USER1_REF).withFields(fields);
+    CreateSearchIndex createSearchIndex =
+        createRequest(test).withOwner(USER1_REF).withFields(fields);
 
     SearchIndex searchIndex = createEntity(createSearchIndex, ADMIN_AUTH_HEADERS);
     String origJson = JsonUtils.pojoToJson(searchIndex);
@@ -204,12 +217,13 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
     searchIndex.withOwner(TEAM11_REF).withFields(updatedFields);
 
     SearchIndexField addedField = updatedFields.get(updatedFields.size() - 1);
-    addedField.setFullyQualifiedName(searchIndex.getFullyQualifiedName() + "." + addedField.getName());
+    addedField.setFullyQualifiedName(
+        searchIndex.getFullyQualifiedName() + "." + addedField.getName());
 
-    ChangeDescription change = getChangeDescription(searchIndex.getVersion());
+    ChangeDescription change = getChangeDescription(searchIndex, MINOR_UPDATE);
     fieldUpdated(change, FIELD_OWNER, USER1_REF, TEAM11_REF);
     fieldAdded(change, "fields", JsonUtils.pojoToJson(List.of(addedField)));
-    patchEntityAndCheck(searchIndex, origJson, ADMIN_AUTH_HEADERS, UpdateType.MINOR_UPDATE, change);
+    patchEntityAndCheck(searchIndex, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
   @Test
@@ -237,7 +251,8 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
     // Apply mutually exclusive tags to a searchIndex field
     CreateSearchIndex create1 = createRequest(testInfo, 1).withOwner(USER1_REF);
     SearchIndexField field =
-        getField("first_name", SearchIndexDataType.TEXT, null).withTags(listOf(TIER1_TAG_LABEL, TIER2_TAG_LABEL));
+        getField("first_name", SearchIndexDataType.TEXT, null)
+            .withTags(listOf(TIER1_TAG_LABEL, TIER2_TAG_LABEL));
     create1.withFields(List.of(field));
     assertResponse(
         () -> createEntity(create1, ADMIN_AUTH_HEADERS),
@@ -247,8 +262,10 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
     // Apply mutually exclusive tags to a searchIndexes's nested field
     CreateSearchIndex create2 = createRequest(testInfo, 1).withOwner(USER1_REF);
     SearchIndexField nestedField =
-        getField("testNested", SearchIndexDataType.TEXT, null).withTags(listOf(TIER1_TAG_LABEL, TIER2_TAG_LABEL));
-    SearchIndexField field1 = getField("test", SearchIndexDataType.NESTED, null).withChildren(List.of(nestedField));
+        getField("testNested", SearchIndexDataType.TEXT, null)
+            .withTags(listOf(TIER1_TAG_LABEL, TIER2_TAG_LABEL));
+    SearchIndexField field1 =
+        getField("test", SearchIndexDataType.NESTED, null).withChildren(List.of(nestedField));
     create2.withFields(List.of(field1));
     assertResponse(
         () -> createEntity(create2, ADMIN_AUTH_HEADERS),
@@ -263,14 +280,17 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
             getField("email", SearchIndexDataType.KEYWORD, null),
             getField("firstName", SearchIndexDataType.KEYWORD, null),
             getField("lastName", SearchIndexDataType.TEXT, null));
-    SearchIndex searchIndex = createAndCheckEntity(createRequest(test).withFields(fields), ADMIN_AUTH_HEADERS);
+    SearchIndex searchIndex =
+        createAndCheckEntity(createRequest(test).withFields(fields), ADMIN_AUTH_HEADERS);
     List<String> messages =
         Arrays.asList(
             "{\"email\": \"email1@email.com\", \"firstName\": \"Bob\", \"lastName\": \"Jones\"}",
             "{\"email\": \"email2@email.com\", \"firstName\": \"Test\", \"lastName\": \"Jones\"}",
             "{\"email\": \"email3@email.com\", \"firstName\": \"Bob\", \"lastName\": \"Jones\"}");
-    SearchIndexSampleData searchIndexSampleData = new SearchIndexSampleData().withMessages(messages);
-    SearchIndex searchIndex1 = putSampleData(searchIndex.getId(), searchIndexSampleData, ADMIN_AUTH_HEADERS);
+    SearchIndexSampleData searchIndexSampleData =
+        new SearchIndexSampleData().withMessages(messages);
+    SearchIndex searchIndex1 =
+        putSampleData(searchIndex.getId(), searchIndexSampleData, ADMIN_AUTH_HEADERS);
     assertEquals(searchIndexSampleData, searchIndex1.getSampleData());
 
     SearchIndex searchIndex2 = getSampleData(searchIndex.getId(), ADMIN_AUTH_HEADERS);
@@ -280,7 +300,8 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
             "{\"email\": \"email1@email.com\", \"firstName\": \"Bob\", \"lastName\": \"Jones\"}",
             "{\"email\": \"email2@email.com\", \"firstName\": \"Test\", \"lastName\": \"Jones\"}");
     searchIndexSampleData.withMessages(messages);
-    SearchIndex putResponse = putSampleData(searchIndex2.getId(), searchIndexSampleData, ADMIN_AUTH_HEADERS);
+    SearchIndex putResponse =
+        putSampleData(searchIndex2.getId(), searchIndexSampleData, ADMIN_AUTH_HEADERS);
     assertEquals(searchIndexSampleData, putResponse.getSampleData());
     searchIndex2 = getSampleData(searchIndex.getId(), ADMIN_AUTH_HEADERS);
     assertEquals(searchIndexSampleData, searchIndex2.getSampleData());
@@ -290,12 +311,59 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
   void test_inheritDomain(TestInfo test) throws IOException {
     // When domain is not set for a searchIndex, carry it forward from the search service
     SearchServiceResourceTest serviceTest = new SearchServiceResourceTest();
-    CreateSearchService createService = serviceTest.createRequest(test).withDomain(DOMAIN.getFullyQualifiedName());
+    CreateSearchService createService =
+        serviceTest.createRequest(test).withDomain(DOMAIN.getFullyQualifiedName());
     SearchService service = serviceTest.createEntity(createService, ADMIN_AUTH_HEADERS);
 
     // Create a searchIndex without domain and ensure it inherits domain from the parent
     CreateSearchIndex create = createRequest("user").withService(service.getFullyQualifiedName());
     assertDomainInheritance(create, DOMAIN.getEntityReference());
+  }
+
+  @Test
+  void test_fieldWithInvalidTag(TestInfo test) throws HttpResponseException {
+    // Add an entity with invalid tag
+    TagLabel invalidTag = new TagLabel().withTagFQN("invalidTag");
+    List<SearchIndexField> invalidFields =
+        List.of(
+            new SearchIndexField()
+                .withName("field")
+                .withDataType(SearchIndexDataType.TEXT)
+                .withTags(listOf(invalidTag)));
+    CreateSearchIndex create = createRequest(getEntityName(test)).withFields(invalidFields);
+
+    // Entity can't be created with PUT or POST
+    assertResponse(
+        () -> createEntity(create, ADMIN_AUTH_HEADERS),
+        NOT_FOUND,
+        CatalogExceptionMessage.entityNotFound(TAG, "invalidTag"));
+
+    assertResponse(
+        () -> updateEntity(create, Status.CREATED, ADMIN_AUTH_HEADERS),
+        NOT_FOUND,
+        CatalogExceptionMessage.entityNotFound(TAG, "invalidTag"));
+
+    // Create an entity and update the columns with PUT and PATCH with an invalid tag
+    List<SearchIndexField> validFields =
+        List.of(new SearchIndexField().withName("field").withDataType(SearchIndexDataType.TEXT));
+    create.setFields(validFields);
+    SearchIndex entity = createEntity(create, ADMIN_AUTH_HEADERS);
+    String json = JsonUtils.pojoToJson(entity);
+
+    create.setFields(invalidFields);
+    assertResponse(
+        () -> updateEntity(create, Status.CREATED, ADMIN_AUTH_HEADERS),
+        NOT_FOUND,
+        CatalogExceptionMessage.entityNotFound(TAG, "invalidTag"));
+
+    entity.setTags(listOf(invalidTag));
+    assertResponse(
+        () -> patchEntity(entity.getId(), json, entity, ADMIN_AUTH_HEADERS),
+        NOT_FOUND,
+        CatalogExceptionMessage.entityNotFound(TAG, "invalidTag"));
+
+    // No lingering relationships should cause error in listing the entity
+    listEntities(null, ADMIN_AUTH_HEADERS);
   }
 
   @Override
@@ -326,8 +394,8 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
     return TestUtils.get(target, SearchIndex.class, authHeaders);
   }
 
-  public SearchIndex getSearchIndexByName(String fqn, String fields, Map<String, String> authHeaders)
-      throws HttpResponseException {
+  public SearchIndex getSearchIndexByName(
+      String fqn, String fields, Map<String, String> authHeaders) throws HttpResponseException {
     WebTarget target = getResourceByName(fqn);
     target = fields != null ? target.queryParam("fields", fields) : target;
     return TestUtils.get(target, SearchIndex.class, authHeaders);
@@ -361,7 +429,8 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
   }
 
   @Override
-  public void compareEntities(SearchIndex expected, SearchIndex updated, Map<String, String> authHeaders)
+  public void compareEntities(
+      SearchIndex expected, SearchIndex updated, Map<String, String> authHeaders)
       throws HttpResponseException {
     assertReference(expected.getService(), expected.getService());
     // TODO add other fields
@@ -370,29 +439,34 @@ public class SearchIndexResourceTest extends EntityResourceTest<SearchIndex, Cre
 
   @Override
   public void assertFieldChange(String fieldName, Object expected, Object actual) {
-    if (expected == actual) {
-      return;
-    }
     assertCommonFieldChange(fieldName, expected, actual);
   }
 
-  public SearchIndex putSampleData(UUID searchIndexId, SearchIndexSampleData data, Map<String, String> authHeaders)
+  public SearchIndex putSampleData(
+      UUID searchIndexId, SearchIndexSampleData data, Map<String, String> authHeaders)
       throws HttpResponseException {
     WebTarget target = getResource(searchIndexId).path("/sampleData");
     return TestUtils.put(target, data, SearchIndex.class, OK, authHeaders);
   }
 
-  public SearchIndex getSampleData(UUID searchIndexId, Map<String, String> authHeaders) throws HttpResponseException {
+  public SearchIndex getSampleData(UUID searchIndexId, Map<String, String> authHeaders)
+      throws HttpResponseException {
     WebTarget target = getResource(searchIndexId).path("/sampleData");
     return TestUtils.get(target, SearchIndex.class, authHeaders);
   }
 
-  private static SearchIndexField getField(String name, SearchIndexDataType fieldDataType, TagLabel tag) {
+  private static SearchIndexField getField(
+      String name, SearchIndexDataType fieldDataType, TagLabel tag) {
     List<TagLabel> tags = tag == null ? new ArrayList<>() : singletonList(tag);
-    return new SearchIndexField().withName(name).withDataType(fieldDataType).withDescription(name).withTags(tags);
+    return new SearchIndexField()
+        .withName(name)
+        .withDataType(fieldDataType)
+        .withDescription(name)
+        .withTags(tags);
   }
 
-  private static void assertFields(List<SearchIndexField> expectedFields, List<SearchIndexField> actualFields)
+  private static void assertFields(
+      List<SearchIndexField> expectedFields, List<SearchIndexField> actualFields)
       throws HttpResponseException {
     if (expectedFields == actualFields) {
       return;
